# RSNA_Aneurysm_Pipeline-1

./: .gitignore  MANIFEST.sha256.json  PIPELINE_GUIDE.md  README.md  VERSION.txt  check_environment.py  check_kaggle_paths.py  inference_rc1_aneurysm_predictor.py  main.py  pyproject.toml  requirements-data.txt  requirements.txt  setup.py  test_imports.py  test_pipeline.py
config/: glossary_synonyms.json  heuristics.yaml  pipeline_config.json  rsna_location.json
rsna_aneurysm/: README.md  __init__.py  generate_mock_weights.py  labels_schema.py  model.py  predict.py  preprocess.py  setup.py
rsna_aneurysm/rsna_aneurysm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
schemas/: calibration_schema.json  location_facts_schema.json  rsna_labels_schema.json
src/: adapter_compact3d_rc2.py  calibrate_isotonic.py  constants.py  data_catalog.py  evaluate_model.py  knowledge_heuristics.py  metadata.py  process_training_data.py  run_inference_rc2.py  train_model.py  validate_submission.py
src/api/: inference_server_rc2.py  offline_runner.py
src/models/: exec_rc2_offline.py
src/utils/: calibration.py  path_utils.py  prediction_utils.py  predictor_loader.py  validate_data.py
tests/: test_configs_and_schemas.py  test_data_schemas.py  test_dicom_robustness.py  test_offline_runner.py  test_training_pipeline.py  test_validate_submission.py  test_validator.py  test_validator_new.py
