[project]
name = "rsna-aneurysm"
version = "1.0.0"
description = "RSNA intracranial aneurysm detection"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "RSNA Aneurysm Team"}]
dependencies = [
  "numpy>=1.26",
  "torch>=2.1",
  "scikit-image>=0.21",
  "pandas>=2.0",
  "pydicom>=2.4",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "scikit-learn>=1.4",
  "jsonschema>=4.21",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.5",
  "black>=24.8",
  "mypy>=1.11",
  "pre-commit>=3.8",
  "types-pyyaml",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
